Cleaned up documentation issues.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1705421 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/apt/examples/skipping-clean.apt.vm
+++ b/src/site/apt/examples/skipping-clean.apt.vm
@@ -47,5 +47,5 @@ Skipping Clean
   You can also skip the cleaning via command line by executing the following command:
 
 +--------
-mvn clean -Dclean.skip=true
+mvn clean -Dmaven.clean.skip=true
 +---------
