--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -36,7 +36,7 @@ ${project.name}
   The Clean Plugin only has one goal.
 
   * {{{./clean-mojo.html}clean:clean}} attempts to clean a project's working
-  directory of the files that we're generated at build-time.  By default, it
+  directory of the files that were generated at build-time.  By default, it
   discovers and deletes the directories configured in
   <<<project.build.directory>>>, <<<project.build.outputDirectory>>>,
   <<<project.build.testOutputDirectory>>>, and
