--- a/src/site/apt/examples/delete_additional_files.apt.vm
+++ b/src/site/apt/examples/delete_additional_files.apt.vm
@@ -73,3 +73,6 @@ Delete Additional Files Not Exposed to Maven
 
  You could also define file set rules in a parent POM. In this case, the clean plugin adds the subproject
  basedir to the defined relative path.
+
+ <<Note:>> The <<<fast>>> delete method will not work for any <<<fileset>>> which defines any <<<includes>>>
+ or <<<excludes>>>, or sets <<<followSymlinks>>> to <<<false>>>, or sets <<<useDefaultExcludes>>> to <<<true>>>.
