--- a/src/site/apt/examples/delete_additional_files.apt.vm
+++ b/src/site/apt/examples/delete_additional_files.apt.vm
@@ -68,7 +68,7 @@ Delete Additional Files Not Exposed to Maven
  is equivalent to:
 
 +--------
-  <directory>${project.basedir}/some/relative/path</directory>
+  <directory>${basedir}/some/relative/path</directory>
 +--------
 
  You could also define file set rules in a parent POM. In this case, the clean plugin adds the subproject
